# carlike_bot_simulation

./: CMakeLists.txt  README.md
src/carlike_bot_simulation/: package.xml
src/carlike_bot_simulation/launch/: joystick.launch.py  key.launch.py  launch.py  launch_new.py  launch_sim.launch.py  rsp.launch.py
src/carlike_bot_simulation/scripts/: a-agent  a-envvvv  a-qnet  a-training  cenv.py  cnn.py  control.py  dqn agent  key.py  keyboard.py  odom.py  thresh.py
src/carlike_bot_simulation/src/: camera_subscriber.py
src/carlike_bot_simulation/urdf/: carlike_bot.urdf.xacro  carlikebot_description.urdf.xacro  dada_bot.urdf.xacro  robot.urdf.xacro
src/carlike_bot_simulation/worlds/: dada.config  dada.sdf  track
